<?xml version="1.0" encoding="utf-8"?><!DOCTYPE resources [<!ENTITY appname "Lovers">]>

<resources>
    <string name="app_name">&appname;</string>
    <string name="app_name_latina" translatable="false">A Chat</string>

    <string name="ok">OK</string>
    <string name="loading">Loading…</string>
    <!--login-->
    <string name="login">Login</string>
    <string name="login_guest">Login guest</string>
    <string name="already_a_member">Already a member?</string>
    <string name="name_required">Name (required)</string>
    <string name="biography_optional">Biography (optional)</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="this_user_is_online">This user is online</string>


    <string name="this_media_not_exist">This media does not exist.</string>
    <string name="unable_save_file">Unable to save this file</string>
    <string name="saved_to">Saved to %1$s</string>
    <string name="share">Share</string>
    <string name="photo">Photo</string>

    <string name="permissions_continue">Continue</string>
    <string name="permissions_not_now">Not now</string>
    <string name="permissions_permission_required">Permission required</string>
    <string name="storage_permission_message">Please allow &appname; to access the storage so you can use device files.</string>
    <string name="storage_permission_need">You need permission to use device files. Please go to settings then "permissions" and activate the storage.</string>
    <string name="storage_camera_permission_message">Please allow &appname; to access the storage and camera so you can select or take photos.</string>
    <string name="storage_camera_permission_need">You need permission to select or take photos. Please go to settings then "permissions" and activate the storage and camera.</string>
    <string name="select_image">Select image</string>
    <string name="unknown">Unknown</string>
    <string name="delete">Delete</string>
    <string name="save_to_gallery">Save to gallery</string>
    <string name="lastOnlineAvatar">Avatar</string>
    <string name="change_photo">Change photo</string>
    <string name="chats">Chats</string>
    <string name="rooms">Rooms</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="guest">Guest</string>
    <string name="member">Member</string>
    <string name="special">Special</string>
    <string name="active">Active</string>
    <string name="senior">Senior</string>
    <string name="admin">Admin</string>
    <string name="manager">Manager</string>
    <string name="onile_s">Online: %1$d</string>
    <string name="rooms_s">Rooms: %1$d</string>
    <string name="s_members_s_online">%1$d members, %2$d online</string>
    <string name="users">Users</string>
    <string name="message">Message</string>
    <string name="long_time_ago">long time ago</string>
    <string name="last_seen_chat_s">last seen chat %1$s</string>
    <string name="no_emoji_found">No emoji found</string>
    <string name="sorry_an_error_occurred">Sorry, an error occurred</string>
    <string name="no_network">No Network</string>
    <string name="tray_again">Tray again</string>
    <string name="you_are_connected">You are connected.</string>
    <string name="start_chatting">Start chatting</string>
    <string name="tap_to_enter">Tap to enter</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="connecting">Connecting…</string>
    <string name="disconnected">Disconnected</string>
    <string name="you_don_t_have_any_contact">You don\'t have any contact</string>
    <string name="you_can_add_your_contacts">You can add your contacts and chat with them</string>
    <string name="reply">Reply</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="typing_three_dots">Typing…</string>
    <string name="typing">Typing</string>
    <string name="members">members</string>
    <string name="online">online</string>
    <string name="room_name">Room name</string>
    <string name="determine_what_gender_can_join_the_room">Determine what gender can join the room</string>
    <string name="create_room">Create room</string>
    <string name="mixed">Mixed</string>
    <string name="new_public_room">New Public Room</string>
    <string name="created">created</string>
    <string name="only_s_can_join_this_room">Only %1$s can join this room.</string>
    <string name="room_gender_doest_match_your_gender">Room gender does not match your gender</string>
    <string name="s_joined_room">%1$s joined the room</string>
    <string name="s_left_room">%1$s left the room</string>
    <string name="likes">Likes</string>
    <string name="score">Score</string>
    <string name="views">Views</string>
    <string name="friends">Friends</string>
    <string name="lastViewers">Last viewers</string>
    <string name="proflie">Profile</string>
    <string name="not_found">Not found</string>
    <string name="like">Like</string>
    <string name="report">Report</string>
    <string name="block">Block</string>
    <string name="settings">Settings</string>
    <string name="comming_soon">Comming soon</string>
    <string name="notifications">Notifications</string>
    <string name="logout">Logout</string>
    <string name="edit">Edit</string>
    <string name="check_your_connection">Check your connection</string>
    <string name="are_you_sure_logout_guest">Logging out will delete your entire chat history and membership from all rooms, are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_profile_picture">Add profile picture</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="biography">Biography</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="new_password">New password</string>
    <string name="curr_password">Current password</string>
    <string name="repeat_new_password">Repeat new password</string>
    <string name="change_password">Change Password</string>
    <string name="wrong_password">Wrong password</string>
    <string name="password_changed">Password changed</string>
    <string name="you_did_not_make_change">You did not make any changes.</string>
    <string name="profile_changed">Profile changed</string>
    <string name="register">Register</string>
    <string name="rank_upgrade">Rank upgrade</string>
    <string name="friend_request">Friend Request</string>
    <string name="successfully_registered">Successfully registered</string>
    <string name="invalid_username">Invalid username</string>
    <string name="username_exist">Username already exist</string>
    <string name="username_available">Username available</string>
    <string name="password_too_short">Password is too short</string>
    <string name="are_you_sure_logout_user">Are you sure you want to logout?</string>
    <string name="do_not_have_account">Do not have an account?</string>
    <string name="login_members">Login members</string>
    <string name="incorrect_username_or_password">Incorrect username or password</string>


    <string name="crop_image_activity_title"></string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>
    <string name="pick_image_intent_chooser_title">Select source</string>
    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>
    <string name="delete_avatar">Delete avatar</string>
    <string name="are_you_sure_delete_avatar">Are you sure you want to delete this avatar?</string>
    <string name="you_can_add_up_to_ten_avatars">You can add up to 10 avatars</string>
    <string name="this_photo_not_exists">This photo does not exist.</string>

    <string name="empty_apps_title">You don\'t have any contact</string>
    <string name="empty_apps_summary">You can add a contact and chat with them by pressing the 🤍 button.</string>

</resources>