<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/like"
        android:icon="@drawable/action_like_outline"
        android:title="@string/like"
        app:iconTint="@color/black"
        app:actionLayout="@layout/layout_action_like"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/notif"
        android:icon="@drawable/ic_action_notif_fill"
        android:title="@string/notifications"
        app:iconTint="@color/black"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/report"
        android:title="@string/report"
        app:showAsAction="never" />

    <item
        android:id="@+id/block"
        android:title="@string/block"
        app:showAsAction="never" />

</menu>