<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.hyapp.achat.viewmodel.LoginGuestViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="@dimen/padding_page_16"
        tools:context=".view.LoginGuestActivity">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/iran_sans_bold"
            android:text="@string/login_guest"
            android:textSize="@dimen/text_22"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/editTextUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:autofillHints="@string/username_required"
            android:fontFamily="@font/iran_sans_regular"
            android:gravity="start|center_vertical"
            android:hint="@string/username_required"
            android:imeOptions="flagNoExtractUi"
            android:inputType="text"
            android:paddingStart="@dimen/padding_8"
            android:paddingEnd="@dimen/padding_8"
            android:singleLine="true"
            android:text="@{viewModel.getSavedName()}"
            android:textSize="@dimen/text_16"
            app:backgroundTint="@color/edit_text_tint_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/editTextBio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/biography_optional"
            android:fontFamily="@font/iran_sans_regular"
            android:gravity="start|center_vertical"
            android:hint="@string/biography_optional"
            android:imeOptions="flagNoExtractUi"
            android:inputType="text"
            android:singleLine="true"
            android:text="@{viewModel.getSavedBio()}"
            android:textSize="@dimen/text_16"
            app:backgroundTint="@color/edit_text_tint_list"
            app:layout_constraintEnd_toEndOf="@+id/editTextUsername"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextUsername"
            app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:checkedButton="@+id/radioBtnMale"
            android:gravity="start"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/editTextBio"
            app:layout_constraintStart_toStartOf="@+id/editTextBio"
            app:layout_constraintTop_toBottomOf="@+id/editTextBio">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioBtnMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{viewModel.getSavedGender()}"
                android:fontFamily="@font/iran_sans_regular"
                android:text="@string/male"
                app:buttonTint="@color/radio_button_tint_list" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioBtnFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginLeft="@dimen/margin_16"
                android:checked="@{!viewModel.getSavedGender()}"
                android:fontFamily="@font/iran_sans_regular"
                android:text="@string/female"
                app:buttonTint="@color/radio_button_tint_list" />
        </RadioGroup>

        <FrameLayout
            android:id="@+id/btnLoginGuest"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginBottom="@dimen/margin_20"
            android:background="@drawable/bg_button"
            android:clickable="true"
            android:elevation="4dp"
            android:focusable="true"
            android:onClick="@{v -> viewModel.loginGuest(editTextUsername.getText().toString(), editTextBio.getText().toString(), radioBtnMale.isChecked())}"
            app:layout_constraintBottom_toTopOf="@+id/alreadyMember"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/btnLoginGuestText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/iran_sans_regular"
                android:text="@string/login_guest"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_14" />
        </FrameLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/alreadyMember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_8"
            android:text="@string/already_a_member"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/login"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@id/btnLoginGuest" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:layout_marginLeft="@dimen/margin_8"
            android:gravity="start|center_vertical"
            android:minWidth="36dp"
            android:minHeight="36dp"
            android:text="@string/login"
            android:textColor="?attr/linkColor"
            app:layout_constraintBaseline_toBaselineOf="@+id/alreadyMember"
            app:layout_constraintEnd_toEndOf="@id/btnLoginGuest"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/alreadyMember" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>